src/tui/app/snapshots/revu__tui__app__tests__offline_filter.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 12)"
---
╭ Queue · all · pay ─────────────╮╭ acme/widgets!42 · feat: charge cards at checkout ──────────────╮
│   ── TO REVIEW · 0 ─────────── ││  omar · feat/checkout → main · 2h · +5 −3 · 2 files · ✓ succes │
│                                ││   1 of 2 approvals · 3 threads, 1 unresolved                   │
│   ── MINE · 0 ──────────────── ││  ◆ 1 on the MR  enter opens                                    │
│                                ││                                                                │
│   ── WATCHING · 0 ──────────── ││ ▎▾ src/pay/charge.rs                    +4 −2  ◆1 · 1 outdated │
│                                ││     ▾ @@ -12,4 +12,5 @@ pub async fn charge                    │
│ ▎ ── ▸ DONE · 0 ────────────── ││      12   12  pub async fn charge(card: &Card, amount: Money)… │
│                                ││  ✓   13      -    let client = Client::new();                  │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
 / pay▏  enter keep · esc clear
 offline · last refresh 3m ago                                                               ? help
