src/tui/app/snapshots/revu__tui__app__tests__palette_commands.snap
---
source: src/tui/app/tests.rs
expression: "render(&mut app, 100, 24)"
---
╭ Queue · all ───────────────────╮╭ acme/widgets!42 · feat: charge cards at checkout ──────────────╮
│   ── TO REVIEW · 1 ─────────── ││  omar · feat/checkout → main · 2h · +5 −3 · 2 files · ✓ succes │
│ ▎ feat charge card╭ search · commands ───────────────────────────────────────╮                   │
│ ▎ omar · !42 · +41│ > pu▌blish                                               │                   │
│                   │                                                          │                   │
│   ── MINE · 1 ────│   publish  publish every draft, in the publish modal     │2  ◆1 · 1 outdated │
│   fix flaky cache │   tab completes · enter runs · ⌫ back to MRs · esc       │                   │
│   nina · !41 · +3 │                                                          │d, amount: Money)… │
│                   │                                                          │;                  │
│   ── WATCHING · 1 │                                                          │key(idempotency_k… │
│   infra: new runne│                                                          │st();              │
│   omar · !35 · +0 │                                                          │ge(amount).await?; │
│                   │                                                          │                   │
│   ── ▸ DONE · 1 ──│                                                          │                   │
│                   │                                                          │) -> Key {         │
│                   │                                                          │                   │
│                   │                                                          │card.expiry()))    │
│                   ╰──────────────────────────────────────────────────────────╯w                  │
│                                ││      42   44  }                                                │
│                                ││                                                                │
│                                ││  ▸ Cargo.lock                                    +1 −1  folded │
│                                ││                                                                │
╰────────────────────────────────╯╰────────────────────────────────────────────────────────────────╯
 gitlab.com · nina · 1 unresolved                                                            ? help
